# MediaPreview

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPLOY.md  LICENSE  MediaPreviewClient.pro  PROJECT_DOCUMENTATION.md  README.md  app_icon.rc  deploy.ps1  dev_setup.ps1  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_interaction.cpp  mainwindow_media.cpp  mainwindow_thumbnails.cpp  mainwindow_ui.cpp  resources.qrc
.github/workflows/: release.yml
scripts/: create-release.ps1  install-windows.ps1
